--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,11 +27,14 @@
 
     /* Modules */
     "module": "commonjs" /* Specify what module code is generated. */,
-    "rootDir": "./" /* Specify the root folder within your source files. */,
+    "rootDirs": [
+      "./src",
+      "./spec"
+    ] /* Specify the root folder within your source files. */,
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
-      "@/*": ["./src/*"]
+      "@reqlang-expr-tspl/runtime": ["./src/index.ts"]
     },
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": [
