--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/node": "^24.0.3",
     "glob": "^11.0.3",
+    "tsx": "^4.20.3",
     "vitest": "^3.2.4"
   }
 }
